[SCRUM-58] fix: 날씨 정보 조회 지역 이름 누락 수정 및 최고, 최저 온도 수정